Issue GRUND-82: Made presentation pages is-beta box none-stretching, to account for longer texts in is-alpha

--- a/scss/modules/_content-boxes.scss
+++ b/scss/modules/_content-boxes.scss
@@ -54,6 +54,10 @@
     @include breakpoint($breakpoint-desk) {
       flex-basis: 33.33%;
     }
+
+    &.has-no-stretch {
+      align-items: flex-start;
+    } 
   }
 
   &--inner {
